# openvpn-gui-rust

./: Cargo.toml  README.md  install.sh  openvpn3-gui.desktop  openvpn3-gui.metainfo.xml  uninstall.sh
src/: app.rs  icon.rs  main.rs  models.rs  tray.rs  utils.rs
src/ui/: components.rs  graph.rs  mod.rs
src/vpn/: health.rs  manager.rs  mod.rs  parser.rs
